# benchmarking

./: Makefile
benchmark_results_data/: scout_bignum_benchmarks.csv
evm/cita-vm/: Dockerfile
evm/geth/: Dockerfile
evm/parity/: Dockerfile
hashfunctions/rustblake2b/: Cargo.toml
hashfunctions/rustblake2b/src/: lib.rs
hashfunctions/rustsha256/: Cargo.toml
hashfunctions/rustsha256/src/: lib.rs
hashfunctions/rusttinykeccak/: Cargo.toml
hashfunctions/rusttinykeccak/src/: lib.rs
notebooks/: wasm-engines.ipynb
scout-engines/: Dockerfile  run_bench.sh
wasm-engines/: bench_wasm_and_native.sh  fizzy.sh  wamr_aot.sh
wasm-engines/docker/: asmble.Dockerfile  fizzy.Dockerfile  wasm-engines-bench.Dockerfile
wasm-engines/project/: settings.py
