[package]
name = "blake2b"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.7"

[dependencies.ewasm_api]
git = "https://github.com/ewasm/ewasm-rust-api"
#rev = "1c01982"
default-features = false
features = ["std", "eth2", "qimalloc"]

[profile.release]
lto = true
debug = false
