[package]
name = "rusttinykeccak"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tiny-keccak = "1.5.0"

[dependencies.ewasm_api]
git = "https://github.com/ewasm/ewasm-rust-api"
#rev = "1c01982"
default-features = false
features = ["std", "eth2", "qimalloc"]

[profile.release]
lto = true
debug = false
